--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 .idea
 test.html
+fortesting.html
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
